test/spec_vectors/simd_f32x4_cmp/fail/module_5.wat
(module (func (result v128) (f32x4.lt (i64.const 0) (f64.const 0))))